VSE OpenGL renderer crashes when using grease pencil #46793

Closed
opened 2015-11-17 11:21:39 +01:00 by Sybren A. Stüvel · 4 comments

System Information
Kubuntu 15.04

Blender Version
Broken: 57a3163096
Worked: 57a3163096199b336840fcf30a0dc78782c42d96~1

Short description of error
Crash

Exact steps for others to reproduce the error

  1. Open vse_opengl_render_slow.blend
  2. Press OpenGL render button. Doesn't matter whether you render single frame or animation.
  3. Crash

The issue seems to revolve around line render_opengl.c:257, as float *rectf is 0 after that call. Strangely BLI_assert(rectf != NULL); on line 322 doesn't catch it. By then Qt Creator reports rectf as "not accessible". The call blend_color_mix_float(&rectf- [x], &rectf- [x], col_src); on line 327 causes the crash due to it accessing the now "not accessible" variable.

**System Information** Kubuntu 15.04 **Blender Version** Broken: 57a3163096199b336840fcf30a0dc78782c42d96 Worked: 57a3163096199b336840fcf30a0dc78782c42d96~1 **Short description of error** Crash **Exact steps for others to reproduce the error** 1. Open [vse_opengl_render_slow.blend](https://archive.blender.org/developer/F255989/vse_opengl_render_slow.blend) 2. Press OpenGL render button. Doesn't matter whether you render single frame or animation. 3. Crash The issue seems to revolve around line render_opengl.c:257, as `float *rectf` is `0` after that call. Strangely `BLI_assert(rectf != NULL);` on line 322 doesn't catch it. By then Qt Creator reports `rectf` as "not accessible". The call `blend_color_mix_float(&rectf- [x], &rectf- [x], col_src);` on line 327 causes the crash due to it accessing the now "not accessible" variable.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Sybren A. Stüvel 2015-11-17 11:21:39 +01:00
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This issue was referenced by d81b9555e5

This issue was referenced by d81b9555e5c095354b4d474b51981b4594c9a6e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46793
No description provided.