Fix T46793: VSE OpenGL renderer crashes when using grease pencil

Own regression in recent speedup commit.